k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatsapp-manager-deploy
  labels:
    app: whatsapp-manager
    system: fizzy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whatsapp-manager
  template:
    metadata:
      labels:
        app: whatsapp-manager
    spec:
      containers:
        - name: nginx
          image: eziotobioli/whatsapp-manager:#{IMAGE_TAG}
          ports:
            - containerPort: 8080
