k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
    system: fizzy
  name: whatsapp-manager-svc
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: whatsapp-manager
  type: ClusterIP
