k8s/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: whatsapp-manager-ingress
  system: fizzy
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.pescarauto.cl
      http:
        paths:
          - backend:
              service:
                name: whatsapp-manager-svc
                port:
                  number: 80
            path: /whatsapp-manager(/|$)(.*)
            pathType: Prefix
  tls:
    - hosts:
        - k8s.pescarauto.cl
      secretName: pescara-tls-cert
