k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: whatsapp-manager-ingress
  namespace: default
spec:
  tls:
    - hosts:
        - k8s.pescarauto.cl
      secretName: pescara-tls-cert
  rules:
    - host: k8s.pescarauto.cl
      http:
        paths:
          - backend:
              service:
                name: whatsapp-manager-svc
                port:
                  number: 80
            path: /whatsapp-manager
            pathType: Prefix
