k8s/prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatsapp-manager-deploy
  labels:
    app: whatsapp-manager
    system: fizzy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whatsapp-manager
  template:
    metadata:
      labels:
        app: whatsapp-manager
    spec:
      containers:
        - name: nginx
          imagePullPolicy: Always
          image: eziotobioli/whatsapp-manager:1.0.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: whatsapp-manager-svc
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: whatsapp-manager
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: whatsapp-manager-mr-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.pescarauto.cl
      http:
        paths:
          - backend:
              service:
                name: whatsapp-manager-svc
                port:
                  number: 80
            path: /whatsapp-manager(/|$)(.*)
            pathType: Prefix
  tls:
    - hosts:
        - k8s.pescarauto.cl
      secretName: pescara-tls-cert
